VIVO EHESS et VIVO fr_FR: Ajustement des pom pour assurer une compilation cohérente dans l'ensemble des repos

--- a/home/pom.xml
+++ b/home/pom.xml
@@ -121,13 +121,13 @@
     <dependencies>
     	<!--  Order is important -->
        	<dependency>
-            <groupId>org.vivoweb</groupId>
+            <groupId>fr.ehess</groupId>
             <artifactId>vivo-home-EHESS</artifactId>
             <version>1.11.2-SNAPSHOT</version>
             <type>tar.gz</type>
         </dependency>
         <dependency>
-            <groupId>org.vivoweb</groupId>
+            <groupId>fr.ehess</groupId>
             <artifactId>vivo-home-fr_FR</artifactId>
             <version>1.11.2-SNAPSHOT</version>
             <type>tar.gz</type>
